tests/const.lx
const x = 3;

print x;

// x = 1; // error
